Fix campaign card overflow and responsiveness

--- a/styles/Campaigns.scss
+++ b/styles/Campaigns.scss
@@ -103,6 +103,9 @@ fieldset {
     @include media(medium-down) {
       padding: 2em 1.5em 1.9em;
     }
+    p {
+      word-break: break-word;
+    }
   }
   .card-stats {
     margin-top: 2em;
